# myfitnesspal-mcp-python

./: README.md  pyproject.toml
src/mfp_mcp/: server.py
tests/: test_serving.py
