[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mfp-mcp"
version = "1.0.0"
description = "MCP Server for MyFitnessPal - track food diary, exercises, measurements, and nutrition goals"
readme = "README.md"
license = "MIT"
# Upper bound is due to lxml (via myfitnesspal): no wheels for 3.13+ at the
# time of writing, and building from source fails against the 3.14 C API.
requires-python = ">=3.10,<3.13"
authors = [
    { name = "Adam" }
]
keywords = [
    "mcp",
    "myfitnesspal",
    "nutrition",
    "fitness",
    "health",
    "diet",
    "tracking",
    "claude",
    "anthropic"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "mcp>=1.0.0",
    "myfitnesspal>=2.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "browser-cookie3>=0.19.0",
    "pint>=0.22",
    "keyring>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
mfp-mcp = "mfp_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mfp_mcp"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
